--- a/main/assets/css/header.css
+++ b/main/assets/css/header.css
@@ -14,8 +14,9 @@
 a {
     text-decoration: none;
 }
-.header{
-    border-bottom: 1px solid #003983;
+.navf { 
+width: 1920px;
+height: 161px;
 }
 
 .navbar {
@@ -25,6 +26,7 @@ a {
     padding: 1rem 1.5rem;
     font-family: lato;
     font-weight: bold;
+    font-size: 25px;
 }
 .hamburger {
     display: none;
@@ -63,6 +65,19 @@ a {
     font-size: 2.1rem;
     font-weight: 500;
     color: #ffffff;
+}
+.tickets {
+    width: 1920px;
+    height: 91px; 
+    background-color: #4596BA;
+}
+.tickets h2 {
+    font-family: lato;
+    font-weight: bold;
+    font-size: 25px;
+    color: #ffffff;
+    text-align: left;
+    padding-top: min(1.5rem, 1.5vw);
 }
 @media only screen and (max-width: 1060px) {
     .nav-menu {
@@ -111,54 +126,12 @@ a {
     }
 
 
-/* Dropdown Button start*/
-.dropbtn {
-    background-color: #76BBD9;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-  }
-  
-  /* Dropdown button on hover & focus */
-  .dropbtn:hover, .dropbtn:focus {
-    background-color: #76BBD9;
-  }
-  
-  /* The container <div> - needed to position the dropdown content */
-  .dropdown {
-    position: relative;
-    display: inline-block;
-  }
-  
-  /* Dropdown Content (Hidden by Default) */
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  
-  /* Links inside the dropdown */
-  .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  }
-  
-  /* Change color of dropdown links on hover */
-  .dropdown-content a:hover {background-color: #ddd;}
-  
-  /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-  .show {display:block;}
-  .dropdown {
+}
+.category {
+    width: 1920px;
+    height: 91px;
+    background-color: #4596BA;
     font-family: lato;
-    font-style: semibold;
-  }
-} 
-
-  /* Dropdown section end */ 
+    font-weight: bold;
+    font-size: 15px;
+}
