--- a/main/assets/css/detail.css
+++ b/main/assets/css/detail.css
@@ -1,33 +1,716 @@
-*{
-    background-color: none;
-}
-.header { 
-    width: 1920px;
-    height: 161px;
-    float: left;
-}
-.container{
-    background-color: white;
-}
-.logo { 
-    width: 350.92px;
-    height: 104.36px;
-}
-.nav { 
-  width: 1920px;
-  height: 161px;
-}
 
-li{
-    float: right;
-    display: inline;
-    padding: 20px;
-    margin-top: -70px;
-    height: 70px;
-}
 
-li a{
+
+
+
+body {
+    margin: 0;
+    font-family: "Lato", sans-serif;
+  
+  }
+  header {
+    background-color: #fff;
+  }
+  #page-logo {
+    object-fit: cover;
+    width: 250px;
+  }
+  
+  ul {
+    list-style: none;
+  }
+  
+  nav {
+    display: flex;
+    justify-content: space-between;
+    text-transform: uppercase;
+    margin: 1% 5%;
+  
+  }
+  nav a{
     text-decoration: none;
-    color: black;
-    font-family: sans-serif;
-}
+    color: #4596BA;
+  }
+  header ul {
+    display: flex;
+  }
+  
+  header li {
+    font-size: 10px;
+    margin-left: 20px;
+  }
+  
+  #header-container {
+    display: flex;
+    align-items: center;
+    margin: 0% 5%;
+    height: 50px;
+  }
+  
+  #header {
+    background-color: #4596BA;
+    text-transform: uppercase;
+  }
+  
+  #header h2 {
+    font-size: 15px;
+    color: white;
+    font-weight: bolder;
+    margin-right: 20px;
+  }
+  
+  #header-select {
+    background-color: #a386b1;
+    color: white;
+    font-size: 10px;
+    font-weight: bold;
+    border: none;
+    border-radius: 1px;
+    height: 28px;
+    padding-left: 10px;
+    margin-right: 20px;
+  }
+  
+  #header a {
+    text-decoration: none;
+    background-color: white;
+    font-size: 10px;
+    font-weight: bold;
+    color: #4596BA;
+    padding: 5px 10px;
+    border-radius: 1px;
+  }
+  .bgn {
+    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+      url("../img/stoel.png");
+    background-repeat: no-repeat;
+    max-width: 100%;
+    width: 100%;
+    height: 800px;
+    padding-top: 130px;
+  }
+  .blok1 {
+    max-width: 100%;
+    width: 1366px;
+    height: 200px;
+    background-color: #4596BA;
+    color: white;
+    display: flex;
+    align-items: center;
+    margin: auto;
+    margin-bottom: 50px;
+  }
+  .welkom-text {
+    width: 470px;
+    margin-left: 20px;
+    font-size: 12px;
+  }
+  #welkom-2 {
+    font-size: 25px;
+    margin-bottom: 20px;
+  }
+  #btn-kies {
+    background-color: #fff;
+    color: grey;
+    width: 300px;
+    height: 50px;
+    padding: 5px;
+    margin-bottom: 25px;
+    font-size: 18px;
+    font-family: "Lato", sans-serif;
+  }
+  .blok2 {
+    display: flex;
+    max-width: 100%;
+    width: 69.6%;
+    justify-content: center;
+    background-color: #fff;
+    padding: 20px;
+    margin: auto;
+  }
+  #google {
+    max-width: 100%;
+    width: 700px;
+    height: 200px;
+  }
+  #Helle {
+    margin-top: 16px;
+    max-width: 100%;
+    width: 39%;
+    height: 383px;
+    margin-left: 20px;
+    clear: left;
+  }
+  .tekst2 {
+    background-color: #4596BA;
+    max-width: 100%;
+    width: 100%;
+    font-size: 18px;
+    font-family: "Lato", sans-serif;
+    color: white;
+    height: 180px;
+  }
+  #location {
+    float: left;
+    margin-right: 10px;
+    padding-top: 10px;
+    width: 20px;
+  }
+  #tekst3 {
+    padding: 5px;
+    font-size: 15px;
+    padding-top: 10px;
+    margin: -1px;
+  }
+  #phone {
+    float: left;
+    margin-right: 10px;
+    padding-top: -100px;
+    width: 30px;
+  }
+  #t4 {
+    font-size: 15px;
+    font-weight: bold;
+  }
+  #t5 {
+    max-width: 100%;
+    width: 600px;
+    font-size: 13px;
+    padding-top: -10px;
+  }
+  .bgn2 {
+    background-color: #000;
+    max-width: 100%;
+    width: 100%;
+    height: auto;
+    margin-top: -30px;
+    padding-top: 50px;
+  }
+  #filmag1 {
+    background-color: #fff;
+    color: #4596BA;
+    max-width: 100%;
+    width: 25%;
+    padding: 15px;
+    display: flex;
+    margin-left: 263px;
+    margin-top: 50px;
+  }
+  .menu2 {
+    padding: 10px;
+    margin-left: 253px;
+  }
+  #films {
+    float: left;
+    background-color: #fff;
+    color: #4596BA;
+    padding: 10px;
+    width: auto;
+  }
+  #week {
+    float: left;
+    background-color: #fff;
+    color: #4596BA;
+    margin-left: 15px;
+    width: auto;
+  }
+  #vandaag {
+    float: left;
+    background-color: #fff;
+    color: #4596BA;
+    margin-left: 5px;
+    margin-right: 5px;
+    padding: 10px;
+     width: auto;
+  }
+  .flex {
+    display: flex;
+    flex-wrap: wrap;
+  
+    margin: 0 auto;
+    width: 90%;
+  }
+  .filmposter {
+    padding: 5px;
+  }
+  
+  .poster {
+    max-width: 100%;
+    width: 200px;
+    height: 300px;
+  }
+  #textfilm {
+    background-color: #fff;
+    width: 200px;
+    padding: 0px;
+  }
+  #tf {
+    background-color: #fff;
+    width: 200px;
+    height: 100px;
+    font-size: 20px;
+    margin-bottom: -40px;
+  }
+  Select#Category {
+    border: none;
+    height: auto;
+    padding: 10px;
+    font-size: 15px;
+    max-width: 100%;
+    width: 154px;
+    color: #4596BA;
+  }
+  #btn-draaiende {
+    border: none;
+    background-color: #4596BA;
+    color: white;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  footer {
+    max-width: 100%;
+    width: 100%;
+    min-height: 300px;
+    max-height: 500px;
+    background-color: grey;
+    display: flex;
+    padding: 75px;
+    box-sizing: border-box;
+    align-items: left;
+    overflow: hidden;
+  }
+  
+  footer ul li {
+    max-width: 500px;
+    color: white;
+    margin-right: 50px;
+  }
+  footer ul li button {
+    width: 125px;
+    height: 50px;
+  }
+  #filmlijn {
+    width: auto;
+    height: 550px !important;
+    margin-top: -80px;
+      margin-left: auto;
+    margin-right: -180px;
+  }
+  
+  #main-body {
+    background-color: black;
+  }
+  
+  #main-info {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin: 0 5%;
+  }
+  
+  .film-title {
+    background-color: white;
+    margin: 4% 0 3%;
+    width: 100%;
+    align-items: center;
+  }
+  #filmlijn {
+    width: auto;
+    height: 450px;
+    margin-top: -80px;
+    display: flex;
+    margin-left: auto;
+  }
+  
+  .film-title h1 {
+    color: #4596BA;
+    text-transform: uppercase;
+    margin: 15px 0 15px 25px;
+  }
+  
+  .container-film {
+    display: flex;
+    flex-direction: row;
+  }
+  
+  .container-film-info {
+    background-color: white;
+    color: #666666;
+    margin-left: 20px;
+  }
+  
+  .film-info {
+    margin: 25px 50px;
+  }
+  
+  .uncolored-star {
+    margin-left: -6px;
+    height: 52px;
+    width: 54px;
+    filter: opacity(1) drop-shadow(0 0 0 #4596BA) brightness(1) !important; 
+  }
+  
+  .film-review img {
+    padding: 30px;
+    height: 25px;
+    width: 25px;
+    filter: opacity(0.5) drop-shadow(0 0 0 #4596BA) brightness(1.1) contrast(300%); 
+  }
+  
+  .film-restrictions img {
+    margin-right: 5px;
+    height: 35px;
+    object-fit: contain;
+  }
+  
+  .film-release {
+    display: flex;
+  }
+  
+  .film-release-date {
+    margin-left: 10px;
+  }
+  
+  .container-additional-info {
+    display: flex;
+  }
+  
+  .additional-info {
+    padding-left: 10px;
+    margin-top: 0;
+  }
+  
+  .additional-info li {
+    display: flex;
+  }
+  
+  .additional-info p {
+    margin: 0;
+  }
+  
+  .additional-info-header {
+    padding: 0 5px 0 0;
+  }
+  
+  .additional-info-header-actor {
+    flex-direction: column;
+  }
+  
+  .info-actors {
+    display: flex;
+    flex-direction: row;
+    padding: 0;
+  }
+  
+  .container-actors {
+    display: flex;
+    flex-direction: column;
+    margin: 20px 10px 0 0;
+  }
+  
+  .container-actors img {
+    width: 110px;
+    height: 165px;
+  }
+  
+  .container-actors p {
+    font-size: 13px;
+    width: 110px;
+  }
+  
+  .buy-tickets {
+    display: flex;
+    justify-content: center;
+    background-color: #4596BA;
+    margin: 25px 0 10px 0;
+    width: 100%;
+    text-decoration: none;
+  }
+  
+  .buy-tickets h1 {
+    color: white;
+    text-transform: uppercase;
+  }
+  
+  /* Footer */
+  #ticket-body {
+    background-color: black;
+    color: #797979;
+  }
+  
+  #main-page {
+    display: flex;
+    flex-direction: column;
+    margin: 0 5%;
+  }
+  
+  .film-title-ticket {
+    background-color: white;
+    margin: 4% 0 3%;
+    width: 100%;
+    align-items: center;
+    margin-bottom: 0;
+  }
+  
+  .film-title-ticket h1 {
+    color: #4596BA;
+    text-transform: uppercase;
+    margin: 15px 0 15px 25px;
+  }
+  
+  .ticket-options {
+    display: flex;
+  }
+  
+  .select {
+    background-color: white;
+    color: #4596BA;
+    border: none;
+    border-radius: 1px;
+    text-transform: uppercase;
+    padding: 5px 5px;
+    margin: 25px 10px 40px 0;
+  }
+  
+  .select p {
+    margin: auto;
+  }
+  
+  .order-page {
+    background-color: white;
+  }
+  
+  .order-page-info {
+    margin: 2% 2.5%;
+  }
+  
+  .buy-steps {
+    color: #6e4f7d;
+    text-transform: uppercase;
+    font-size: 20px;
+  }
+  
+  .buy-steps h4 {
+    margin: 0;
+    padding: 0;
+  }
+  
+  .ticket-grid-container {
+    display: grid;
+    grid-template-columns: 85% 10% 0%;
+  }
+  
+  .ticket-info p {
+    text-transform: uppercase;
+    margin: 25px 0 0;
+  }
+  
+  .ticket-select {
+    width: 60px;
+    height: 25px;
+    margin: 5px 0;
+    text-align: center;
+    border-width: 1.2px;
+    border-color: #4596BA;
+  }
+  
+  #bottom-hr {
+    margin: 15px 0;
+  }
+  
+  label {
+    display: flex;
+    align-items: center;
+  }
+  
+  .ticket-price {
+    margin: 10px 0;
+  }
+  
+  .ticket-voucher {
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  #voucher-text {
+    text-transform: uppercase;
+  }
+  
+  #voucher-input {
+    width: 70%;
+    text-align: start;
+    font-size: 10px;
+    padding-left: 15px;
+    border-width: 1.2px;
+    border-color: #4596BA;
+  }
+  
+  #voucher-button {
+    border: none;
+    background-color: #4596BA;
+    color: white;
+    padding: 5px 75px;
+  }
+  
+  .choose-seats {
+    margin-top: 75px;
+  }
+  
+  .order-seat-placement {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
+  
+  .order-seat-placement img {
+    object-fit: contain;
+    width: 700px;
+  }
+  
+  #available-button {
+    background-color: #9d7ec8;
+    color: white;
+    border: none;
+    padding: 10px 30px;
+    font-size: 20px;
+    font-weight: bold;
+    margin-right: 10px;
+  }
+  
+  #unavailable-button {
+    background-color: #523579;
+    color: white;
+    border: none;
+    padding: 10px 30px;
+    font-size: 20px;
+    font-weight: bold;
+    margin-right: 10px;
+  }
+  
+  #selected-button {
+    background-color: #794eb4;
+    color: white;
+    border: none;
+    padding: 10px 30px;
+    font-size: 20px;
+    font-weight: bold;
+    margin-right: 10px;
+  }
+  
+  .order-info {
+    margin-top: 50px;
+  }
+  
+  .order-info-border {
+    border: 3px solid #4596BA;
+    margin: 30px 0 50px;
+    height: 440px;
+  }
+  
+  .order-info-content {
+    margin: 20px;
+    display: flex;
+    flex-direction: row;
+  }
+  
+  .order-info-poster {
+    object-fit: contain;
+    height: 400px;
+  }
+  
+  .order-ticket-info {
+    display: flex;
+    flex-direction: column;
+    margin: 10px 30px;
+  }
+  
+  .order-ticket-title {
+    text-transform: uppercase;
+    font-size: 20px;
+  }
+  
+  .order-ticket-film-restrictions img {
+    margin-right: 3px;
+    height: 35px;
+    object-fit: contain;
+  }
+  
+  .order-ticket {
+    padding: 0;
+  }
+  
+  .order-ticket li {
+    display: flex;
+  }
+  
+  .order-ticket p {
+    margin: 0;
+  }
+  
+  .additional-info-header {
+    padding: 0 5px 0 0;
+  }
+  
+  .order-ticket-total {
+    margin-top: 20px;
+  }
+  
+  .data-grid {
+    display: grid;
+    grid-template-columns: 300px 300px;
+    margin: 30px 0 50px;
+  }
+  
+  .email-input {
+    grid-column-start: 1;
+    grid-column-end: 3;
+  }
+  
+  .name-input,
+  .email-input {
+    border: 2px solid #4596BA;
+    height: 35px;
+    margin-bottom: 10px;
+    margin-right: 10px;
+    padding-left: 15px;
+    color: #797979;
+  }
+  
+  .payment-choice {
+    display: flex;
+    flex-direction: row;
+    padding: 0;
+  }
+  
+  .payment-choice li {
+    display: flex;
+    flex-direction: row;
+    margin-right: 30px;
+  }
+  
+  .tos-container {
+    display: flex;
+    flex-direction: row;
+  }
+  
+  #tos-text {
+    color: #666666;
+  }
+  
+  .buy-ticket {
+    display: flex;
+    justify-content: center;
+    background-color: #4596BA;
+    color: white;
+    width: 100%;
+    text-decoration: none;
+    border: none;
+    padding: 40px;
+    font-size: 30px;
+    font-weight: bold;
+    margin: 30px 0 50px 0;
+    text-transform: uppercase;
+  }
