--- a/main/assets/css/detail.css
+++ b/main/assets/css/detail.css
@@ -347,14 +347,15 @@ body {
   }
   
   .uncolored-star {
-    margin-left: -6px;
     height: 52px;
     width: 54px;
     filter: opacity(1) drop-shadow(0 0 0 #4596BA) brightness(1) !important; 
   }
   
   .film-review img {
-    padding: 30px;
+    margin-left: 150px;
+    margin-top: 10px;
+    margin-bottom: 50px;
     height: 25px;
     width: 25px;
     filter: opacity(0.5) drop-shadow(0 0 0 #4596BA) brightness(1.1) contrast(300%); 
