--- a/main/assets/css/detail.css
+++ b/main/assets/css/detail.css
@@ -353,11 +353,12 @@ body {
   }
   
   .film-review img {
-    margin-left: 150px;
+    margin-left: -15px;
+    margin-right: 20px;
     margin-top: 10px;
-    margin-bottom: 50px;
-    height: 25px;
-    width: 25px;
+    margin-bottom: 20px;
+    height: 65px;
+    width: 65px;
     filter: opacity(0.5) drop-shadow(0 0 0 #4596BA) brightness(1.1) contrast(300%); 
   }
   
