--- a/main/assets/css/header.css
+++ b/main/assets/css/header.css
@@ -5,6 +5,8 @@
 .logo { 
     width: 350.92px;
     height: 104.36px;
+    display: flex;
+    justify-content: start;
   } 
 
   li {
@@ -15,8 +17,8 @@ a {
     text-decoration: none;
 }
 .navf { 
-width: 1920px;
-height: 161px;
+
+width: 100%;
 }
 
 .navbar {
@@ -128,7 +130,7 @@ height: 161px;
 
 }
 .category {
-    width: 1920px;
+    width: 100%;
     height: 91px;
     background-color: #4596BA;
 }
