--- a/main/assets/css/style.css
+++ b/main/assets/css/style.css
@@ -1,5 +1,49 @@
-
-
+.stoelen img{ 
+    width: 100%;
+    height: 1639px;
+    margin: 0;
+    filter: brightness(25%);
+    z-index: -1;
+    position: absolute;
+}
+.box { 
+    position: absolute;
+    background: #4596BA;
+    display: block;
+    content: "";
+    height: 315px;
+    width: 1576px;
+    margin-top: 301px;
+    margin-left: 171px;
+}
+.welcome { 
+    font-style: lato;
+    font-weight: bold;
+    font-size: 45px;
+    color: white;
+    margin-top: 320px;
+    margin-left: 250px;
+    position: absolute;
+}
+.txtbox { 
+    font-style: lato;
+    font-weight: medium;
+    font-size: 15px;
+    color: white;
+    width: 650px;
+    position: absolute;
+    margin-top: 400px;
+    margin-left: 260px;
+}
+.select { 
+    font-style: lato;
+    font-weight: bold;
+    font-size: 15px;
+    color: #4596BA;
+    position: absolute;
+    margin-top: 520px;
+    margin-left: 260px;
+}
 
 
 
